made the fixed wall and display centered and visible

--- a/src/sass/parts/menu.scss
+++ b/src/sass/parts/menu.scss
@@ -2,8 +2,8 @@
     position:relative;
     left:0;
     top:0;
-    min-width:300px;
-    max-width:300px;
+    min-width:280px;
+    max-width:280px;
     display: flex;
     flex-flow: column nowrap;
     height: 100vh;
