--- a/src/sass/parts/renderingArea.scss
+++ b/src/sass/parts/renderingArea.scss
@@ -22,7 +22,13 @@
     }
 
     #fixed-wall{
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(165, 87, 24, 0.5);
+        #display{
+          position: relative;
+          top:50%;
+          left:50%;
+          transform: translate(0, -45%);
+        }
     }
 
 
