--- a/src/style.css
+++ b/src/style.css
@@ -31,8 +31,8 @@ html, body {
   position: relative;
   left: 0;
   top: 0;
-  min-width: 300px;
-  max-width: 300px;
+  min-width: 280px;
+  max-width: 280px;
   display: flex;
   flex-flow: column nowrap;
   height: 100vh;
@@ -138,7 +138,13 @@ html, body {
   transform: translate(-50%, -50%);
 }
 #renderingArea #fixed-wall {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(165, 87, 24, 0.5);
+}
+#renderingArea #fixed-wall #display {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(0, -45%);
 }
 #renderingArea .mod-wrapper {
   display: inline-flex;
